# vicos_ros

./: .gitignore  README.md
communication/julius_ros/launch/: recognizer.launch
communication/julius_ros/models/: turtlebot.voca
communication/julius_ros/src/: recognizer.cpp
communication/speech_proxy/: CMakeLists.txt  package.xml
communication/speech_proxy/android/: AndroidManifest.xml  CMakeLists.txt
communication/speech_proxy/android/cmake/: Android.cmake
communication/speech_proxy/android/res/drawable/: bg_gradient.xml  mic_selector.xml
communication/speech_proxy/android/res/layout/: activity_main.xml
communication/speech_proxy/android/res/values/: colors.xml  strings.xml
communication/speech_proxy/android/res/xml/: preferences.xml
communication/speech_proxy/android/src/si/vicos/ros/: SettingsActivity.java  VoiceCommanderActivity.java
communication/speech_proxy/android/src/si/vicos/ros/commander/: SettingsActivity.java  VoiceCommanderActivity.java
communication/speech_proxy/launch/: speech_proxy.launch
communication/speech_proxy/src/: speech_server.cpp
communication/voice_navigation/: CMakeLists.txt  package.xml
communication/voice_navigation/launch/: turtlebot_voice_cmd.launch
communication/voice_navigation/nodes/: voice_cmd_vel.py
communication/voice_navigation/scripts/: robot_chat.py
depth/localizer/: CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
depth/localizer/launch/: localizer.launch
depth/localizer/src/: mapper
depth/pcl_demos/src/: forwarder.cpp
detection/detection_msgs/: CMakeLists.txt  package.xml
detection/dlib_detector/: CMakeLists.txt
detection/dlib_detector/src/: object_detector.cpp
detection/ferns_detector/: CMakeLists.txt
detection/ferns_detector/src/: detector.cpp
detection/opencv_detector/launch/: facedetector.launch  facedetector_kinect.launch
detection/opencv_detector/src/: detector
detection/zbar_detector/: CMakeLists.txt  package.xml
detection/zbar_detector/launch/: detector.launch  detector_camera.launch
detection/zbar_detector/src/: main.cpp
facedetector/: CMakeLists.txt  package.xml  setup.py
facedetector/launch/: facedetector.launch  facedetector_camera.launch  facedetector_kinect.launch  facedetector_mapper.launch  facemapper.launch  facevisualizer.launch
facedetector/src/: detector  mapper  visualizer
ferns_ros/: CMakeLists.txt  package.xml
ferns_ros/launch/: detector.launch  multi_detector.launch
ferns_ros/msg/: Detection.msg
ferns_ros/src/: detector.cpp
julius_ros/: CMakeLists.txt  package.xml
julius_ros/models/: turtlebot.grammar  turtlebot.jconf
julius_ros/src/: recognizer.cpp
localizer/: CMakeLists.txt
localizer/launch/: localizer.launch  localizer_node.launch
localizer/src/: localizer.cpp  localizer_node.cpp
localizer/srv/: Localize.srv
navigation/costmap_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
navigation/costmap_layers/include/costmap_layers/: virtual_wall_layer.h
navigation/costmap_layers/msg/: Wall.msg
navigation/costmap_layers/src/: virtual_wall_layer.cpp
pcl_demos/: CMakeLists.txt  package.xml
pcl_demos/launch/: forwarder.launch
pcl_demos/src/: voxelgrid.cpp
turtlebot_vicos/: hydro_fixes.sh  laptop_setup.sh  package.xml  roshost.sh  rosmaster.sh
turtlebot_vicos/launch/: CMakeLists.txt  dummy.launch  turtlebot_voice_cmd.launch
turtlebot_vicos/launch/includes/: _mobile_base.launch  mobile_base.launch.xml
turtlebot_vicos/scripts/: robot_chat.py
zbar_ros/: CMakeLists.txt  package.xml
zbar_ros/launch/: detector.launch  detector_camera.launch
zbar_ros/msg/: Marker.msg
zbar_ros/src/: main.cpp
