<?xml version="1.0"?>
<package>
  <name>julius_ros</name>
  <version>0.1.0</version>
  <description>Julius speech recognition integration ROS package</description>

  <maintainer email="luka.cehovin@fri.uni-lj.si">Luka Čehovin</maintainer>

  <license>BSD</license>
  <url type="website">https://trac.vicos.si/ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
  </export>
</package>
