<?xml version="1.0"?>
<package>
  <name>zbar_detector</name>
  <version>0.1.0</version>
  <description>The zbar barcode reader ROS package</description>

  <maintainer email="luka.cehovin@fri.uni-lj.si">Luka Čehovin</maintainer>

  <license>BSD</license>
  <url type="website">https://trac.vicos.si/ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
